CRMSwitch_Project/force-app/main/default/objects/TASKRAY__Project__c/fields/Cloned_Append_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Append_Name__c</fullName>
    <formula>IF(ISPICKVAL(Frequency__c , &apos;Daily&apos;), Name + &apos; - &apos; + TEXT(TODAY()),
IF(ISPICKVAL(Frequency__c , &apos;Weekly&apos;), Name + &apos; - Week of &apos; + TEXT(TODAY()), 
IF(ISPICKVAL(Frequency__c , &apos;Monthly&apos;), Name + &apos; - &apos; + CASE(MONTH(TODAY()),
    1, &quot;Jan&quot;,
    2, &quot;Feb&quot;,
    3, &quot;Mar&quot;, 
    4, &quot;Apr&quot;, 
    5, &quot;May&quot;, 
    6, &quot;Jun&quot;,
    7, &quot;Jul&quot;,
    8, &quot;Aug&quot;,
    9, &quot;Sept&quot;,
    10, &quot;Oct&quot;,
    11, &quot;Nov&quot;,
    12, &quot;Dec&quot;,
    &quot;None&quot;) + &apos;-&apos; +  TEXT(YEAR(TODAY())), 
   null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloned Append Name</label>
    <type>Text</type>
</CustomField>