CRMSwitch_Project/force-app/main/default/objects/TASKRAY__Project__c/fields/Scheduled_to_Run__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_to_Run__c</fullName>
    <description>Monthly - 1st day of the month
Weekly - Sun(1), Mon(2), Tue(3), etc...</description>
    <formula>OR( AND(ISPICKVAL( Frequency__c, &quot;Monthly&quot;),Day( TODAY() )=1) ,
    AND(ISPICKVAL( Frequency__c, &quot;Weekly&quot;),WeekDay( TODAY() )=1) ,
    ISPICKVAL(Frequency__c, &quot;Daily&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled to Run</label>
    <type>Checkbox</type>
</CustomField>